[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/ui/game_screens/game_screens.gd" type="Script" id=1]
[ext_resource path="res://src/ui/graphics/bear_awake.jpg" type="Texture" id=2]
[ext_resource path="res://src/ui/graphics/background_garden.jpg" type="Texture" id=3]
[ext_resource path="res://src/themes/theme_standart.tres" type="Theme" id=4]
[ext_resource path="res://src/items/graphics/apple_04.png" type="Texture" id=5]
[ext_resource path="res://src/characters/graphics/bear/bear_sit.png" type="Texture" id=6]
[ext_resource path="res://src/items/graphics/coin_1.png" type="Texture" id=7]
[ext_resource path="res://src/themes/theme_game_screens.tres" type="Theme" id=8]
[ext_resource path="res://src/themes/fonts/atma_medium.tres" type="DynamicFont" id=9]

[sub_resource type="Animation" id=1]
resource_name = "fadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="GameOver" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 4 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
script = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -304.0
margin_top = -179.0
margin_right = 304.0
theme = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
margin_right = 608.0
margin_bottom = 75.0

[node name="Ja" type="Button" parent="Buttons/HBoxContainer"]
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 75 )
text = "Ja!"

[node name="VSeparator" type="VSeparator" parent="Buttons/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 254.0
margin_right = 354.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Nein" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 358.0
margin_right = 608.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 75 )
text = "Nein."

[node name="HSeparator" type="HSeparator" parent="Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 79.0
margin_right = 608.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 100 )

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 56.0
margin_top = -176.0
margin_right = 412.0
margin_bottom = 32.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 9 )
text = "Der BÃ¤r ist aufgewacht!
Soll er noch einmal
einschlafen und
weiterspielen?"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -592.0
margin_top = -360.0
margin_bottom = 88.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 1 )

[node name="Score" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 32.0
margin_right = 544.0
margin_bottom = 105.0
theme = ExtResource( 8 )

[node name="ScoreApples" type="Label" parent="Score"]
margin_top = 5.0
margin_right = 48.0
margin_bottom = 57.0
text = "333"

[node name="Apple" type="TextureRect" parent="Score"]
margin_left = 52.0
margin_right = 102.0
margin_bottom = 73.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
expand = true

[node name="Mul" type="Label" parent="Score"]
margin_left = 106.0
margin_top = 5.0
margin_right = 153.0
margin_bottom = 57.0
text = " x   "

[node name="ScoreCoins" type="Label" parent="Score"]
margin_left = 157.0
margin_top = 5.0
margin_right = 205.0
margin_bottom = 57.0
text = "333"

[node name="Coin" type="TextureRect" parent="Score"]
margin_left = 209.0
margin_right = 259.0
margin_bottom = 73.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 7 )
expand = true

[node name="Sum" type="Label" parent="Score"]
margin_left = 263.0
margin_top = 5.0
margin_right = 299.0
margin_bottom = 57.0
text = "  = "

[node name="ScoreTotal" type="Label" parent="Score"]
margin_left = 303.0
margin_top = 5.0
margin_right = 351.0
margin_bottom = 57.0
text = "333"

[node name="Bear" type="TextureRect" parent="Score"]
margin_left = 355.0
margin_right = 405.0
margin_bottom = 73.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 6 )
expand = true

[connection signal="pressed" from="Buttons/HBoxContainer/Ja" to="." method="_on_Ja_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/Nein" to="." method="_on_Nein_pressed"]
